cpufreq: Add new cpufreq governor Dark_Stealth
Signed-off-by: The-DarkBeast <pranaynarang@gmail.com>

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -215,6 +215,14 @@ config CPU_FREQ_DEFAULT_GOV_CHILL
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the interactive governor.
 
+config CPU_FREQ_DEFAULT_GOV_DARK_STEALTH
+	bool "dark_stealth"
+	select CPU_FREQ_GOV_DARK_STEALTH
+	help
+	  Using the CPUFreq governor 'dark_stealth' as default allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -439,6 +447,13 @@ config CPU_FREQ_GOV_CHILL
 	  Be aware that not all cpufreq drivers support the conservative
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the interactive governor.
+
+config CPU_FREQ_GOV_DARK_STEALTH
+	tristate "'dark_stealth' cpufreq policy governor"
+	help
+	  'dark_stealth' - This driver is used for full latency sensitive control over CPU
+	  
+	  If in doubt, say N.
 
 config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
