--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -430,15 +430,13 @@ config CPU_FREQ_GOV_BARRY_ALLEN
 	  If in doubt, say N.
  
 config CPU_FREQ_GOV_CHILL
-	bool "chill"
-	select CPU_FREQ_GOV_INTERACTIVE
+	tristate "'chill' cpufreq governor"
+	depends on CPU_FREQ
+	select CPU_FREQ_GOV_COMMON
+	default y
 	help
-          Use the CPUFreq governor 'chill' as default. This allows
-	  you to get a full dynamic frequency capable system by simply
-	  loading your cpufreq low-level hardware driver.
-	  Be aware that not all cpufreq drivers support the conservative
-	  governor. If unsure have a look at the help section of the
-	  driver. Fallback governor will be the interactive governor.
+	  'chill' - similar to 'conservative', but optimized for devices
+	  that go into suspended or display off states often.
 
 config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
